# flask-react-dash-spike

./: .flake8  .gitignore  Makefile  Procfile.local  README.md  app.py  pyproject.toml
app/: index.html
backend/: dash_app.py  expenses.py  second_dash_app.py
backend/pages/: first_page.py  second_page.py
frontend/: package.json
frontend/src/: DashApp.module.css  Layout.tsx  main.tsx
frontend/src/components/: DashApp.tsx  Navigation.tsx
frontend/src/pages/: DashFirstPage.tsx  DashSecondPage.tsx  ExpensesPage.tsx  First.tsx  FirstPage.tsx  FourthPage.tsx  Second.tsx  SecondPage.tsx  SillyCounterPage.tsx  ThirdPage.tsx
