[tool.poetry]
name = "flask-react-dash-spike"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_react_dash_spike"}]

[tool.black]
target-version = ["py39"]
line-length = 120
extend-exclude = "frontend"

[tool.isort]
profile = "black"
skip = "venv,frontend"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
pretty = true
show_error_codes = true
color_output = true

exclude = ["venv", "frontend"]

disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
dash = "^2.8.1"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
autoflake = "^2.0.1"
mypy = "^1.0.1"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
